[gd_scene load_steps=15 format=3 uid="uid://byd6pg53kkhah"]

[ext_resource type="Script" path="res://Plant.gd" id="1_itgo2"]
[ext_resource type="Texture2D" uid="uid://dmdcadavf8q7l" path="res://plants.png" id="2_73rll"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ibwtp"]
atlas = ExtResource("2_73rll")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5ow1"]
atlas = ExtResource("2_73rll")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skebo"]
atlas = ExtResource("2_73rll")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu8la"]
atlas = ExtResource("2_73rll")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muw66"]
atlas = ExtResource("2_73rll")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cn3s"]
atlas = ExtResource("2_73rll")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvosv"]
atlas = ExtResource("2_73rll")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vlch"]
atlas = ExtResource("2_73rll")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcwnj"]
atlas = ExtResource("2_73rll")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nofw5"]
atlas = ExtResource("2_73rll")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mg36m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibwtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5ow1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skebo")
}],
"loop": true,
"name": &"melon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu8la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muw66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cn3s")
}],
"loop": true,
"name": &"parsnip",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvosv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vlch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcwnj")
}],
"loop": true,
"name": &"tomato",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nofw5")
}],
"loop": true,
"name": &"weed",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_237xe"]
size = Vector2(32, 32)

[node name="Plant" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_itgo2")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mg36m")
animation = &"melon"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_237xe")

[node name="GrowthTimer" type="Timer" parent="."]
one_shot = true

[node name="CorruptionTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
[connection signal="timeout" from="CorruptionTimer" to="." method="_on_corruption_timer_timeout"]
